fix: remove bullets from recipe list
the bullets were overlapping with the border so i removed them

--- a/index.css
+++ b/index.css
@@ -6,4 +6,5 @@ width: 20%;
 padding: 10px;
 margin-left: 40%;
 border: 2px black solid;
+list-style: none;
 }
